# ComSciCalculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  code_formatter.sh  setup_repo.sh
comSciCalcLib/: CMakeLists.txt  comscicalc.c  comscicalc.h  comscicalc_operators.c  print_utils.c  print_utils.h
common/gui/: CMakeLists.txt  gui.c  gui.h
common/logger/: CMakeLists.txt  logger.c  logger.h
firmware/: CMakeLists.txt  display.c  display.h  firmware_common.c  firmware_common.h  main.c  pin_map.h  rp2040_utils.c  rp2040_utils.h
firmware/common/: firmware_common.c  firmware_common.h
firmware/fonts/: Cascadia_16_L2.h  Cascadia_32_L2.h  Cascadia_36_L2.h  Cascadia_38_L2.h  Comic Sans MS_38_L2.h  comic_20_L2.h  comic_36_L2.h  font.h  font_library.c
firmware/renesas/: config.cmake
firmware/renesas/computeModule_v0/: CMakeLists.txt  build.sh  configuration.xml
firmware/renesas/computeModule_v0/inc/: bsp_clock_cfg.h  hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
firmware/renesas/computeModule_v0/inc/fsp_cfg/: r_sci_spi_cfg.h  r_sci_uart_cfg.h
firmware/renesas/computeModule_v0/inc/fsp_cfg/bsp/: bsp_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_pin_cfg.h
firmware/renesas/ek-ra4m3/: CMakeLists.txt  build.sh  configuration.xml  fsp_config.sh
firmware/renesas/ek-ra4m3/inc/: FreeRTOSConfig.h  bsp_clock_cfg.h  common_data.h  hal_data.c  hal_data.h  pin_data.c  renesas_utils.h  vector_data.c  vector_data.h
firmware/renesas/ek-ra4m3/inc/fsp_cfg/: r_sci_uart_cfg.h
firmware/renesas/ek-ra4m3/inc/fsp_cfg/bsp/: bsp_cfg.h  bsp_mcu_family_cfg.h  bsp_pin_cfg.h
firmware/renesas/ek-ra4m3/src/: main.c  renesas_utils.c
firmware/renesas/toolchain/: gcc-arm-none-eabi.cmake
firmware/rp2040/: CMakeLists.txt
firmware/rp2040/hardware/: pin_map.h  rp2040_utils.c  rp2040_utils.h
firmware/rp2040/inc/: FreeRTOSConfig.h
firmware/rp2040/src/: CMakeLists.txt  main.c
firmware/tm4c123gxl/tm4c123_freertos_comscicalc/: .cproject  .gitignore  .project  FreeRTOSConfig.h  main.c  tm4c123gh6pm_startup_ccs_gcc.c
firmware/tm4c123gxl/tm4c123_freertos_comscicalc/targetConfigs/: Tiva TM4C123GH6PM.ccxml
hardware/comSciCalc/: Conn_and_sw.kicad_sch  comSciCalc.kicad_pcb  comSciCalc.kicad_pcb_try_1.kicad_prl  comSciCalc.kicad_pcb_try_1.kicad_pro  comSciCalc.kicad_prl  comSciCalc.kicad_pro  comSciCalc.kicad_sch  comSciCalc_HID.kicad_sch  comSciCalc_MCU.kicad_sch  comSciCalc_power.kicad_sch  fp-info-cache  keypad.kicad_sch  keypad_leds.kicad_sch  ltc3101_power.kicad_sch  mcu_clk_pwr.kicad_sch  screen_and_driver.kicad_sch
hardware/comscicalc_board/comscicalc_keys_rev0/: buttons.kicad_sch  comscicalc_keys_rev0.kicad_dru  comscicalc_keys_rev0.kicad_pcb  comscicalc_keys_rev0.kicad_prl  comscicalc_keys_rev0.kicad_pro  comscicalc_keys_rev0.kicad_sch  leds.kicad_sch
hardware/comscicalc_compute/rev0/: fp-info-cache
hardware/comscicalc_compute/rev1/: LCD.kicad_sch  comscicalc_compute.kicad_pcb  comscicalc_compute.kicad_prl  comscicalc_compute.kicad_pro  comscicalc_compute.kicad_sch  fp-info-cache  mcu.kicad_sch  power.kicad_sch
hardware/comscicalc_tester/rev0/comscicalc_hil_tester/: adc.kicad_sch  comscicalc_hil_tester.kicad_pcb  comscicalc_hil_tester.kicad_prl  comscicalc_hil_tester.kicad_pro  comscicalc_hil_tester.kicad_sch  lcd_tester.kicad_sch  mcu.kicad_sch  power.kicad_sch  test_fixture.kicad_sch  untitled.kicad_sch  usb_dut.kicad_sch
hardware/pcb/comscicalc/: comscicalc.csv  comscicalc.kicad_pcb  comscicalc.kicad_prl  comscicalc.kicad_pro  comscicalc.kicad_sch  comscicalc.kicad_sch-bak  comscicalc.xml  comscicalc_buttons_sch.kicad_sch  comscicalc_lcd_sch.kicad_sch  comscicalc_mcu_sch.kicad_sch  comscicalc_power_sch.kicad_sch  dual_3v3.kicad_sch  fp-info-cache  leds.kicad_sch
hardware/pcb_comscicalc/comscicalc_renesas/comscicalc_compute/: comscicalc_compute.kicad_prl  fp-info-cache  mcu.kicad_sch  power.kicad_sch-bak
hardware/pinmux/: comsci_pins.c  comsci_pins.csv  comsci_pins.h  pinmux.pin
software/: README.md  comSciCalc.py  doxygen_config  run_unit_tests.sh  setup.py  test_comSciCalc.py  test_coverage.sh
software/comSciCalc_lib/: CMakeLists.txt  README.md  comSciPythonModule.c  comscicalc.c  comscicalc.h  comscicalc_common.h  comscicalc_ctest.c  comscicalc_operators.c  comscicalc_operators.h  print_utils.c  print_utils.h  uart_logger.c  uart_logger.h
software/comms/: CMakeLists.txt  README.md  comscicalc_comms.c  comscicalc_comms.h
software/display/: display.c  display.h  menu.c  menu.h
software/display/fonts/: Cascadia_16_L2.h  Cascadia_20_L2.h  Cascadia_30_L2.h  Cascadia_32_L2.h  Cascadia_34_L2.h  Cascadia_36_L2.h  Cascadia_38_L2.h  Comic Sans MS_38_L2.h  Comic_Sans_MS_38_L2.h  comic_16_L2.h  comic_30_L2.h  comic_32_L2.h  comic_34_L2.h  font_library.c
software/firmware_workspace/: .gitignore
software/firmware_workspace/tm4c123_freertos_comscicalc/: .ccsproject  .cproject  .project  display.c  display.h  main.c
software/firmware_workspace/tm4c123_freertos_comscicalc/fonts/: Cascadia_12_L1.h  Cascadia_38_L2.h  Comic_Sans_MS_38_L2.h  font.h  font_library.c  font_library.h
software/firmware_workspace/tm4c123_freertos_comscicalc/targetConfigs/: Tiva TM4C123GH6PM.ccxml
software/gui/: CMakeLists.txt  README.md  build_gui.sh  comscicalc.py  gui.py
software/unit_tests/: CMakeLists.txt  build_and_run_unit_tests.sh  build_unit_tests.sh  test_calc_static.c  test_comms.c  test_format.c  test_input.c  test_randomized_input.c  test_suite.c  test_suite.h  test_utils.c  unit_tests.c  unit_tests.h
utils/: README.md
utils/fontConverter/: fontConverter.py  h_footer.txt  h_header.txt
workspace/FT81x_EK_TM4C123GXL_TI2/: .cproject  .project  Board.h  empty.cfg  ft81x.c  hal.c  hal.h  list.c  main.c
workspace/FT81x_EK_TM4C123GXL_TI2/.launches/: FT81x_EK_TM4C123GXL_TI2.launch
workspace/FT81x_EK_TM4C123GXL_TI2/src/: makefile.libs
workspace/empty_EK_TM4C123GXL_TI/: ADAFRUIT_2050.c  ADAFRUIT_2050.h  comSciCalc.c  comSciCalc.h  empty.cfg  list.h  main.c
workspace/empty_EK_TM4C123GXL_TI/src/: makefile.libs
(+32 files in other folders)
